--- a/GCG_frontend/.env.example
+++ b/GCG_frontend/.env.example
@@ -1,6 +1,6 @@
 # Backend API URL
-# For development, use your local backend server
-VITE_API_URL=http://localhost:5000/api/leaderboard
+# For production (deployed on Render)
+VITE_API_URL=https://gcg-rqxl.onrender.com/api/leaderboard
 
-# For production, use your deployed backend URL
-# VITE_API_URL=https://gcg-rqxl.onrender.com/api/leaderboard
+# For local development, uncomment below:
+# VITE_API_URL=http://localhost:5000/api/leaderboard
