--- a/backend_gcg/.env.example
+++ b/backend_gcg/.env.example
@@ -4,3 +4,7 @@ MONGO_URI=mongodb+srv://<username>:<password>@<cluster>.mongodb.net/<dbname>?ret
 
 # Server Port
 PORT=5000
+
+# Gemini AI API Key
+# Get your API key from: https://makersuite.google.com/app/apikey
+GEMINI_API_KEY=your_gemini_api_key_here
