--- a/GCG_frontend/.env.example
+++ b/GCG_frontend/.env.example
@@ -1,5 +1,5 @@
 # Backend API URL (Production - deployed on Render)
-VITE_API_URL=https://gcg-rqxl.onrender.com/api/leaderboard
+VITE_API_URL=https://gcg-rqxl.onrender.com
 
 # For local development, create .env.local with:
-# VITE_API_URL=http://localhost:5000/api/leaderboard
+# VITE_API_URL=http://localhost:5000
